--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1749993416/apple-touch-icon_u3tfjn.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
