--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
     <title>Visiona Optik - Kacamata Berkualitas untuk Anda</title>
     <meta name="description" content="Visiona Optik menyediakan kacamata berkualitas dengan lensa terbaik untuk kesehatan mata Anda. Pilihan frame modern untuk pria, wanita, dan anak-anak.">
 
-    <link rel="icon" type="image/png"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1749993416/favicon-96x96_dj1lcz.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1749993416/favicon_bs0guk.svg" />
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1749993416/favicon_zrx7tt.ico" />
-    <link rel="apple-touch-icon" sizes="180x180"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1749993416/apple-touch-icon_u3tfjn.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/icons.png" />
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
